Feat: prepare for Heroku deploy